# compendium

./: CMakeLists.txt  README.md
.github/: labeler.yaml  release.yaml
.github/workflows/: auto-labeler.yaml  deploy-dev.yaml  deploy-prod.yaml  deploy-test.yaml  validate.yaml
cmake/: TestUtils.cmake
docs/: testing.md
docs/architecture/: core-architecture.md
installer/: windows-setup.iss
installer/config/: config.xml
packaging/windows/: windows-setup.iss
scripts/: build-app-windows.bat  build-installer-windows.bat  build-windows-app.bat  build-windows-installer.bat
src/: CMakeLists.txt  main.cpp  resources.qrc
src/app/: CMakeLists.txt  ServiceInitializer.cpp  ServiceInitializer.h  ServiceProvider.h  main.cpp
src/backend/: CMakeLists.txt
src/backend/bridge/: WorkspaceViewModel.h
src/backend/bridges/: AppController.cpp  AppController.h  WorkspaceViewModel.cpp  WorkspaceViewModel.h
src/backend/core/: AppConstants.h  AppController.cpp  AppController.h  LoggerService.cpp  LoggerService.h  ServiceInitializer.cpp  ServiceInitializer.h  ServiceProvider.cpp  ServiceProvider.h
src/backend/interfaces/: ICounterService.h
src/backend/services/: CounterService.cpp  CounterService.h  WorkspaceService.cpp  WorkspaceService.h
src/backend/viewmodels/: CounterViewModel.cpp  CounterViewModel.h  WelcomeViewModel.cpp  WelcomeViewModel.h
src/core/: CMakeLists.txt  ServiceProvider.h
src/core/interfaces/: IWorkspaceService.h
src/ui/: CMakeLists.txt  Main.qml  UiConstants.qml  resources.qrc  uiConstants.qml
src/ui/components/: AppToolbar.qml  MainDashBoard.qml  MenuButton.qml  SideDrawer.qml  StandardButton.qml  WelcomeScreen.qml
src/ui/pages/: CounterPage.qml  CustomTitleBar.qml  MainDashBoard.qml  WelcomePage.qml  WelcomeScreen.qml  WindowResizeBorders.qml
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  tst_ServiceInitializer.cpp
tests/backend/: CMakeLists.txt
tests/backend/bridges/: CMakeLists.txt  tst_AppController.cpp  tst_WorkspaceViewModel.cpp
tests/backend/core/: tst_ServiceInitializer.cpp  tst_ServiceProvider.cpp
tests/backend/services/: CMakeLists.txt  tst_CounterService.cpp  tst_WorkspaceService.cpp
tests/backend/viewmodels/: tst_CounterViewModel.cpp
tests/core/: CMakeLists.txt  tst_ServiceProvider.cpp
tests/mocks/: CMakeLists.txt
tests/shared/: CMakeLists.txt  main.cpp
tests/ui/: CMakeLists.txt  TestSetup.cpp
tests/ui/components/: tst_AppToolbar.qml  tst_MenuButton.qml
tests/ui/pages/: tst_CounterPage.qml  tst_WelcomeScreen.qml
tests/ui/utils/: BaseUiTestCase.qml  UiTestHelper.qml  qmldir
tests/unit/: CMakeLists.txt
tests/unit/app/: tst_ServiceInitializer.cpp
tests/unit/backend/: CMakeLists.txt
tests/unit/backend/bridges/: tst_AppController.cpp
tests/unit/backend/core/: tst_ServiceInitializer.cpp  tst_ServiceProvider.cpp
tests/unit/backend/services/: tst_LoggerService.cpp
tests/unit/core/: tst_ServiceProvider.cpp
tests/unit/mocks/: MockWorkspaceService.h
